added very embrional version of the third part text, not ordered

--- a/TeX_files/problem3.tex
+++ b/TeX_files/problem3.tex
@@ -1,2 +1,10 @@
 \section{Problem no.3}
-radiating elements verification via CST
+In this last part the aim is to verify the radiating element behavior, starting from the single patch and arriving to the complete array. For the patch antenna we use the one we designed for the second laboratory, that are described in the following images * *. Composing the array with that antennas we can have a first simulation of the complete radiating element, and so we can make some considerations. The bigger issue in particular are the resonance frequency, which due to the interelements coupling are deviated from the single antenna case. In particular the resonance frequency results shifted of few hundreds of megahertz upward, movement that we have to take in mind in order to re-design a similar patch antenna complying better with the specifications.
+
+In order to find the scattering parameters of the antennas we use a very short line with characteristic impedance close to the patch output one. This choice is made in order to estimate the behavior of the elements in case of microstrip feeding, and to minimize the contribution due to the mismatching of the load the line is much less than the wavelength for this frequency.
+
+Simulating the four antennas with their entering ports we have a total number of 16 scattering parameters, which are not so easy to handle in order to find the load seen from the beam forming network point of view. Because we use a constant tapering for the antennas feeding we can combine the results of this simulation and find only four scattering parameters describing the reflection coefficient of each port. This way we can also find the relative impedance, so that in our particular case of feeding we can evaluate precisely the active impedance of the antennas.
+
+Cause of the simmetry of the structure we have that the impedance of the external elements slightly differs from the internal one, but as reported in the graph * the difference is negligible.
+
+The last pass is to consider the radiation pattern, which is first of all evaluated with a farfield monitor, and after that is exported and elaborated in Matlab in order to verify the correct behavior of the array factor. For this calculation we need also the farfield ratiation of the single patch antenna, which must be used as a punctual divider for the array farfield. The result of this trivial calculation is the array factor printed in figure *, which respect all the initial requirements.
