--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 \documentclass[11pt,a4paper,twoside,openright]{article}
 
 \usepackage[utf8]{inputenc}
-%\usepackage[italian]{babel}
+\usepackage[english]{babel}
 \usepackage{amsmath}
 \usepackage{mathtools}
 \usepackage{amsfonts}
@@ -12,6 +12,17 @@
 \usepackage{textcomp}
 \usepackage{enumerate} % Required for enumerate model
 \usepackage{gensymb} %Required for degree symbol which is made ^{\circ}
+\usepackage{caption} %used to have cool captions
+\captionsetup{
+	tableposition=top,
+	figureposition=bottom,
+	font=small,
+	format=hang, 
+	labelfont=bf}	%caption setup
+\usepackage[protrusion=allmath]{microtype} %used to have high quality text formatting
+\usepackage{graphicx,subfig,float,wrapfig,rotating,multirow,epstopdf} %high quality tables and images formatting
+\usepackage{booktabs,siunitx,array,tabularx} % tables
+\usepackage{amsbsy,bm,amsmath} % math
 
 %\usepackage [ Lenny ]{fncychap}
 \usepackage{longtable} % Required to put long tables
