title formatting and index
1) added new title formatting
2) added table of contents
if you don't like these changes just ignore the pull request :)

--- a/main.tex
+++ b/main.tex
@@ -45,15 +45,14 @@
 
 %\makeindex
 
+\title{	01NVSOQ -- Advanced Antenna Engineering \\
+	\huge {\textsc{Assignment 4: array components}}	}
+
 \begin{document}
-
-
-
-\title{Assignment no.4}
 \author{Amedeo Bertone (243878)\\Davide Botteon (239595)\\Enrico Maria Renzi (244028)\\
-	01NVSOQ -- Advanced Antenna Engineering}
-%\date{December 10, 2017}
-\maketitle
+}
+\maketitle 		
+\tableofcontents
 
 \input{./TeX_files/introduction}
 \input{./TeX_files/problem1}
