--- a/TeX_files/problem1.tex
+++ b/TeX_files/problem1.tex
@@ -34,7 +34,7 @@ One possible implementation is proposed in figure \ref{fig:p1_bfn_block}, where 
 	\item [Splitter2] this section matches the radiating elements with section1 outputs, moreover it convey power into the radiators giving the correct power ratio between elements.
 	\item [Splitter3] this is symmetric to section2 with respect to the feeding line longitudinal axis. 
 	\item [Match1] these lines acts as matching connection from power splitter1 to power splitters2 and 3, moreover they are used to adjust the distance between elements.
-	\item [Match2] matching connections between radiators and power splitters2,33;
+	\item [Match2] matching connections between radiators and power splitters2,3;
 \end{description}
 Overall the BFN must be designed in order to be compliant with the requirement on:
 \begin{itemize}
@@ -42,10 +42,10 @@ Overall the BFN must be designed in order to be compliant with the requirement o
 	\item amplitude tapering between edge and centre elements;
 	\item main beam direction: since the array is broadside then the phase shift among elements must be null.
 \end{itemize}
+Another requirement concerns the full array's dimensions, although those are not specified particular attention will it has been devoted into taking the minimal amount of space.
 Each block's design and simulation are reported in the following paragraphs.
 
 \subsection{Splitter 1 design}
-
 Figure \ref{fig:p1_sec1_block} shows the block diagram of splitter1. 
 \begin{figure}[H] 
 	\centering
@@ -66,7 +66,7 @@ The two quarter-wavelength transformers are seen as two parallel admittances fro
 \begin{equation}
 	Z_{c,QW}= \sqrt{R_{in,QW}\cdot R_{out,QW}}=\sqrt{100\Omega\cdot 50\Omega}=70.7\Omega \notag
 \end{equation}
-\begin{figure}[H] 
+\begin{figure}[t] 
 	\centering
 	\includegraphics[scale=0.5]{p1_sec1_ustrip}
 	\caption{Splitter1 microstrip implementation. }
@@ -82,9 +82,8 @@ Theoretical and optimized dimensions are reported in table \ref{tab:p1_sec1DimIN
 		\toprule
 			& theoretical & optimized&\\
 		\midrule 
-		W\textsubscript{in} 	&	3.020		&	2.964	 & mm 		\\
-		L\textsubscript{in}		&	16.797		& 	17.976		& mm	\\ 
-		Z\textsubscript{c,in}	& 	50 & 50.6	&$\Omega$ \\
+		W\textsubscript{in} 	&	3.02		&	2.91	 & mm 		\\
+		Z\textsubscript{c,in}	& 	50 			& 50.06		&$\Omega$ \\
 		\bottomrule
 	\end{tabular}	
 \end{table}
@@ -96,9 +95,9 @@ Theoretical and optimized dimensions are reported in table \ref{tab:p1_sec1DimIN
 		\toprule
 		& theoretical & optimized&\\
 		\midrule 
-		W\textsubscript{QW} 	&	1.599		&	1.458	& mm		\\
-		L\textsubscript{QW}	&	17.248		& 	16.706		& mm	\\ 
-		Z\textsubscript{c,QW}& 	70.7 &73.9	&$\Omega$ \\
+		W\textsubscript{QW} 	&	1.59		&	1.49	& mm		\\
+		L\textsubscript{QW}	&	17.25		& 	17.3		& mm	\\ 
+		Z\textsubscript{c,QW}& 	70.7 &73.1	&$\Omega$ \\
 		\bottomrule
 	\end{tabular}	
 \end{table}
@@ -120,7 +119,7 @@ Figure \ref{fig:p1_sec2_block} shows the block diagram of splitter2 and match1 (
 	\caption{Splitter2 and match1 TXL implementation. }
 	\label{fig:p1_sec2_block}
 \end{figure}
-Match1 lines are designed as $\lambda_{g}/2$, 50$\Omega$ characteristic impedance microstrip lines. Acting as transparent transmission lines, they allow splitter2 and 3 to have Z\textsubscript{in}=50$\Omega$ at their input ports. Again a Z\textsubscript{out}=50$\Omega$ is chosen to avoid abrupt impedance variations. Imposing Z\textsubscript{in}=50$\Omega$ we also avoid the appearance of lines narrower than W\textsubscript{min} within the power splitter2 (and splitter3).
+Match1 lines are designed as $\lambda_{g}/2$, 50$\Omega$ characteristic impedance microstrip lines. Since both the output of splitter1 and the input of splitter2,3 are matched to 50$\Omega$, the length of these line can be chosen as necessary to impose the correct distance between the radiators. Again, splitter2,3's output impedance is set to Z\textsubscript{out}=50$\Omega$ to avoid abrupt mismatch in contiguous lines connections. Moreover, imposing Z\textsubscript{in}=50$\Omega$ we also avoid the appearance of lines narrower than W\textsubscript{min} within the two splitters.
 
 The splitter is composed by two quarter-wavelength transformers that provide the correct current tapering for the radiators. To design that we will consider the power entering and exiting the component.
 Having chosen as tapering t=0.54, then:
@@ -151,58 +150,46 @@ From equation (\ref{eq:p1_ZcQW}):
 	Z_{c,QWb}=\sqrt{R_{in,QWb}\cdot Z_{out}}=\sqrt{221\Omega \cdot 50\Omega}=105\Omega \notag \\
 	Z_{c,QWa}=\sqrt{R_{in,QWa}\cdot Z_{out}}=\sqrt{64.4\Omega \cdot 50\Omega}=56.7\Omega \notag
 \end{gather}
-The circuit has been then converted into microstrip layout and simulated. Optimized dimensions for this section are reported in table \ref{tab:p2_sec2DimM1}, \ref{tab:p2_sec2DimQWa} and \ref{tab:p2_sec2DimQWb}.
-Unfortunately, the splitter2's values found so far produced a wrong tapering (t=-4.2dB), therefore the lines width and length have been tuned till the desired tapering specification has been fulfilled. Since t>-5.3dB we need to increase the difference between R\textsubscript{in,QWa} and R\textsubscript{in,QWb}. 
-With t=-5.2dB we have the best compromise between excitation amplitude distribution and phase shift, that is equal to 3.94$^\circ$.
+Finally, the circuit has been converted into microstrip layout and simulated. Some optimized dimensions for this section are reported in table \ref{tab:p2_sec2DimQWa} and \ref{tab:p2_sec2DimQWb} (Match1 has the same parameters shown in \ref{tab:p1_sec1DimIN}).
+Unfortunately, the values found so far produced both the expected tapering  and 3.46$^\circ$ of phase shift between branches.
 Figure \ref{fig:p2_sec1Scatt} shows the input parameters, while figure \ref{fig:p1_sec2_ustrip} depicts the microstrip implementation.
 \begin{figure}[t] 
 	\centering
 	\includegraphics[scale=0.5]{p1_sec2_ustrip}
-	\caption{Splitter1 microstrip implementation. }
+	\caption{Splitter2 microstrip implementation. }
 	\label{fig:p1_sec2_ustrip}
 \end{figure}
-\begin{table} [H]
-	\label{tab:21_sec2DimM1}
-	\caption{Match1: microstrip dimensions.}
-	\centering	
-	\begin{tabular}{lcccc} 
-		\toprule
-		& theoretical & optimized (no tap)& optimized (tap)&\\
-		\midrule 
-		W\textsubscript{M1} 	&	3.021		&	2.964	&2.695& mm 		\\
-		L\textsubscript{M1}		&	33.594		& 	33.594	&23.133& mm		\\ 
-		Z\textsubscript{c,M1}	&	50			& 	50.6	&53.5& $\Omega$		\\
-		\bottomrule
-	\end{tabular}	
-\end{table}
-\begin{table} [H]
+\newpage
+\begin{table} [h]
 	\label{tab:p2_sec2DimQWa}
 	\caption{Splitter2: quarter-wavelength a dimensions.}
 	\centering	
-	\begin{tabular}{lcccc} 
+	\begin{tabular}{lccc} 
 		\toprule
-		& theoretical & optimized(tap) &optimized (tap)&\\
+		& theoretical & optimized &\\
 		\midrule 
-		W\textsubscript{QWa} 	&	2.435		&	2.106	&2.295& mm		\\
-		L\textsubscript{QWa}	&	16.959		& 	14.656	&15.262& mm		\\ 
-		Z\textsubscript{c,QWa}	&	56.6		& 	61.4	&58.6& $\Omega$		\\
+		W\textsubscript{QWa} 	&	2.44		&	2.17& mm		\\
+		L\textsubscript{QWa}	&	16.96		& 	15.42& mm		\\ 
+		Z\textsubscript{c,QWa}	&	56.6		& 	60.4& $\Omega$		\\
 		\bottomrule
 	\end{tabular}	
 \end{table}
-\begin{table} [H]
+
+\begin{table} [h]
 	\label{tab:p2sec2DimQWb}
 	\caption{Splitter2: quarter-wavelength b dimensions.}
 	\centering	
-	\begin{tabular}{lcccc} 
+	\begin{tabular}{lccc} 
 		\toprule
-		& theoretical & optimized(no tap) &optimized (tap)&\\
+		& theoretical & optimized &\\
 		\midrule 
-		W\textsubscript{QWb} 	&	0.613		&	0.507	&0.457& mm		\\
-		L\textsubscript{QWb}	&	17.709		& 	16.170	&14.005& mm		\\ 
-		Z\textsubscript{c,QWb}	&	105			& 	112		&116& $\Omega$		\\
+		W\textsubscript{QWb} 	&	0.613		&0.43& mm		\\
+		L\textsubscript{QWb}	&	17.709		& 14.11& mm		\\ 
+		Z\textsubscript{c,QWb}	&	105			& 118& $\Omega$		\\
 		\bottomrule
 	\end{tabular}	
 \end{table}
+
 \newpage
 
 \begin{figure}[H] 
@@ -212,7 +199,7 @@ Figure \ref{fig:p2_sec1Scatt} shows the input parameters, while figure \ref{fig:
 	\caption{Section 1 most important scattering parameters. As it appears both input matching and even power splitting are accomplished. The tapering value is t=-5.2dB, the phase shift amount to 3.94$^\circ$ (reference impedance 50$\Omega$).}.
 	\label{fig:p2_sec1Scatt}
 \end{figure}
-
+\newpage
 \subsection{Match2 design}
 
 As final design step another quarter-wavelength transformer is introduced. This element matches splitter2 and splitter3, R\textsubscript{out}=50$\Omega$, output impedance with the radiators' input impedance, equal to Z\textsubscript{in,patch}=120$\Omega$. Using equation (\ref{eq:p1_ZcQW}) we have:
@@ -231,9 +218,9 @@ The conversion from ideal microstrip to layout can be found in table \ref{tab:21
 		\toprule
 		& theoretical 			& optimized &\\
 		\midrule 
-		W\textsubscript{M1} 	&	1.316		&	1.212	& mm 		\\
-		L\textsubscript{M1}		&	17.365		& 	17.365	& mm		\\ 
-		Z\textsubscript{c,M1}	&	77.5		& 	80.45	& $\Omega$		\\
+		W\textsubscript{M2} 	&	1.32		&	1.21	& mm 		\\
+		L\textsubscript{M2}		&	17.37		& 	17.37	& mm		\\ 
+		Z\textsubscript{c,M2}	&	77.5		& 	80.4	& $\Omega$		\\
 		\bottomrule
 	\end{tabular}	
 \end{table}
@@ -241,6 +228,64 @@ The conversion from ideal microstrip to layout can be found in table \ref{tab:21
 \begin{figure}[t] 
 	\centering
 	\includegraphics[scale=0.43]{p1_M2_Smod}
-	\caption{Match2 return loss (reference impedance 50$\Omega$). }
+	\caption{Match2 return loss (reference impedance 77.5$\Omega$). }
 	\label{fig:p1_M2_Smod}
 \end{figure}
+\newpage
+\begin{figure}[H] 
+	\centering
+	\includegraphics[scale=0.7,angle=90]{p1_bfn_compl_BOXES}
+	\caption{Full beam forming network. }
+	\label{fig:p1_bfn_compl1}
+\end{figure}
+
+\newpage
+
+\subsection{Complete BFN with dimensions}
+
+Now that all the main components have been optimized the following step includes the merging of all the sections as shown if figure \ref{fig:p1_bfn_compl1}.
+To connect splitter1 with splitter2 we used a 50$\Omega$ line bent in order to be compliant with the radiators' spacing specification. The bend has been chosen with mitered topology, to reduce parasitics. Furthermore, the 50$\Omega$ and 120$\Omega$ lines parallel to the y axis are kept short to reduce the space occupied by the BFN. Within the following paragraph the performed beam forming network simulation will be presented.
+
+All the beam forming network dimensions are grouped from figure * to figure **.
+\begin{figure}[t] 
+	\centering
+	\includegraphics[scale=0.5]{p1_bfn_quot5}
+	\caption{Here are highlighted the quoted regions. }
+	\label{fig:p1_bfn_quot5}
+\end{figure}
+\newpage 
+\begin{figure}[H] 
+	\centering
+	\includegraphics[scale=0.7,angle=90]{p1_bfn_quot0}
+	\caption{Here the quoted regions are highlighted. }
+	\label{fig:p1_bfn_quot0}
+\end{figure}
+
+\begin{figure}[H] 
+	\centering
+	\includegraphics[scale=0.7,angle=90]{p1_bfn_quot1}
+	\caption{Quoted BFN: region D. }
+	\label{fig:p1_bfn_quot1}
+\end{figure}
+
+\begin{figure}[H] 
+	\centering
+	\includegraphics[scale=0.6,angle=90]{p1_bfn_quot2}
+	\caption{Quoted BFN: region A. }
+	\label{fig:p1_bfn_quot2}
+\end{figure}
+
+\begin{figure}[H] 
+	\centering
+	\includegraphics[scale=0.6,angle=90]{p1_bfn_quot3}
+	\caption{Quoted BFN: region B. }
+	\label{fig:p1_bfn_quot3}
+\end{figure}
+
+\begin{figure}[H] 
+	\centering
+	\includegraphics[scale=0.6,angle=90]{p1_bfn_quot4}
+	\caption{Quoted BFN: region C. }
+	\label{fig:p1_bfn_quot4}
+\end{figure}
+
