Added images (I'm uploading them immediately)

--- a/TeX_files/problem2.tex
+++ b/TeX_files/problem2.tex
@@ -103,4 +103,44 @@ Unfortunately, if till this point the simulations seemed to be very encouraging,
 
 \par\medskip
 \noindent
+
+In the following figures: the globally best result we obtained in \textit{Microwave Studio}, not bad in terms of tapering, but not precise at all in terms of resonance frequency-
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.35]{11.png}
+\caption{S\textsubscript{11} parameter, not resonating correctly}
+\label{a}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.35]{2151a.png}
+\caption{S\textsubscript{21} parameter, coinciding with S\textsubscript{51}}
+\label{a}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.35]{3141a.png}
+\caption{S\textsubscript{31} parameter, coinciding with S\textsubscript{41}}
+\label{b}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.35]{2151p.png}
+\caption{S\textsubscript{21} parameter (phase), coinciding with S\textsubscript{51}}
+\label{c}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.35]{3141p.png}
+\caption{S\textsubscript{31} parameter (phase), coinciding with S\textsubscript{41}}
+\label{d}
+\end{figure}
+
+\par\medskip
+\noindent
 We also tried to simulate the behavior of the BFN when attached to the patches, but, since the tapering was not the good one we had hoped for, the SLL wasn't completely tuned on the -20 dB level either. Good notes are the fact that the radiated field happened to be broadside, meaning that the phasing, at least, was correct, and that the resonce frequency, even if not perfect, happened to be more precise in this case.
